# SimplePlanePlatform

./: .dockerignore  CLAUDE.md  PRODUCT.md  README.md  docker-compose.yml  pom.xml  restore-dns.sh  start-tun.bat  start-tun.ps1  start-tun.sh
android-app/app/src/main/java/com/proxy/android/: MainActivity.kt  PlaneVpnService.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml
dashboard/: BACKEND.md  FRONTEND.md  diagnose-tun.sh  nginx.conf  package.json  server.js  setup-tun-permissions.sh  start-tun.sh  yaml.js
dashboard/presets/: .gitignore
dashboard/public/: app.js  index.html  style.css
docker/: Dockerfile.local  Dockerfile.remote  proxy.yml  remote.yml
docs/: ARCHITECTURE.md  docker部署说明.md  启动说明.md  性能问题排查与思考.md
docs/design/: android-client-tasks.md  crypto-vectors.json  knowledge-base-architecture.md  proxy-remote-server-design.md  proxy-remote-tasks.md  tun-mode-plan.md  tun-mode-tasks.md
plane-core/: Cargo.toml
plane-core/src/: crypto.rs  dispatcher.rs  error.rs  jni_bridge.rs  lib.rs  logging.rs  outbound.rs  proxy_proto.rs  tcp_stack.rs
proxy-cluster/: pom.xml
proxy-cluster/src/main/java/com/proxy/cluster/: ClientInvoker.java  FailbackClusterInvoker.java  FailfastClusterInvoker.java  FailoverClusterInvoker.java  ForkingClusterInvoker.java
proxy-cluster/src/main/java/com/proxy/cluster/filter/: AccessLogFilter.java  MonitorFilter.java  RateLimitFilter.java  RouterFilter.java  SequentialFilterChainBuilder.java  TrafficFilter.java
proxy-cluster/src/main/java/com/proxy/cluster/loadbalance/: ConsistentHashLoadBalance.java  LeastActiveLoadBalance.java  RandomLoadBalance.java  RoundRobinLoadBalance.java
proxy-common/: pom.xml
proxy-common/src/main/java/com/proxy/common/cluster/: ClusterInvoker.java  LoadBalance.java
proxy-common/src/main/java/com/proxy/common/codec/: Codec.java  CodecException.java  SerializationException.java
proxy-common/src/main/java/com/proxy/common/crypto/: Cipher.java  CipherConfig.java  CryptoException.java
proxy-common/src/main/java/com/proxy/common/exchange/: ExchangeClient.java  ExchangeServer.java  Exchanger.java  ProxyRequest.java  ProxyResponse.java  PushHandler.java  Tunnel.java
proxy-common/src/main/java/com/proxy/common/filter/: Filter.java  FilterChainBuilder.java  Invocation.java  (+3 more)
proxy-crypto/: pom.xml
proxy-crypto/src/main/java/com/proxy/crypto/: AesCtrHmacCipher.java  AesGcmCipher.java  ChaCha20Cipher.java  NoneCipher.java
proxy-crypto/src/test/java/com/proxy/crypto/: CryptoVectorGenTest.java
proxy-exchange/: pom.xml
proxy-local/: local-run.out  pom.xml
proxy-local/src/main/java/com/proxy/local/: ProxyLocalServer.java
proxy-local/src/main/resources/: logback.xml  proxy.yml
proxy-remote/: deploy-nginx.sh  nginx-stream.conf  pom.xml
proxy-remote/src/main/java/com/proxy/remote/: ProxyRemoteServer.java
proxy-remote/src/main/resources/: remote.yml
proxy-transport-netty/: pom.xml
scripts/: proxy-ctl.sh
tun-adapter/: Cargo.toml
tun-adapter/config/: tun.toml
tun-adapter/src/: config.rs  main.rs  route_guard.rs  tun_device.rs
图片转PDF/: image_to_pdf.py  requirements.txt
客户端/client/: pom.xml
服务端/server/: pom.xml
(+80 files in other folders)
