[package]
name = "tun-adapter"
version = "0.1.0"
edition = "2021"
description = "TUN transparent proxy adapter for SimplePlanePlatform"
authors = ["zhanghonghao"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tun2 = { version = "4", features = ["async"] }
smoltcp = { version = "0.11", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-dns"] }
hickory-proto = "0.24"
fast-socks5 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "2"
anyhow = "1"
lru = "0.12"
clap = { version = "4", features = ["derive"] }
ipnet = "2"
libc = "0.2"
bytes = "1"

# Windows 平台专用依赖
# tun2 v4 在 Windows 上已默认内置 Wintun 支持，无需额外 feature。
# winreg 用于在需要时读写 Windows 注册表（如 DNS 备份/恢复）。
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
